Fix avatar overlaping username

--- a/main.css
+++ b/main.css
@@ -571,7 +571,7 @@
   display: grid;
   grid-template-areas: "banner body" "user-infos body" "footer body";
   grid-template-columns: 300px 1fr;
-  grid-template-rows: 180px 120px 1fr;
+  grid-template-rows: 180px auto 1fr;
   width: unset !important;
   max-width: 600px;
   min-height: 300px;
@@ -595,15 +595,16 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
-  justify-content: flex-end;
+  flex: 1 1 50%;
   padding: 0;
   background-color: var(--background-secondary-alt);
   border-radius: 0 0 var(--border-radius) var(--border-radius);
 }
 :root .userPopout-2j1gM4 .headerTop-3GPUSF .profileBadges-2pItdR {
   position: static;
+  flex: 1;
   width: calc(100% - 24px);
-  height: 100%;
+  padding: 12px;
   max-width: unset;
   align-items: center;
   justify-content: flex-end;
@@ -616,11 +617,11 @@
 :root .userPopout-2j1gM4 .headerTop-3GPUSF .headerText-1-WmDq {
   display: flex;
   flex-direction: column;
-  width: calc(100% - 12px);
-  height: calc(100% - 12px);
+  width: calc(100% - 24px);
+  height: calc(100% - 24px);
   align-items: flex-start;
   justify-content: center;
-  padding: 6px 6px 6px 24px;
+  padding: 12px 12px 12px 24px;
   background-color: var(--background-primary);
 }
 :root .userPopout-2j1gM4 .headerTop-3GPUSF .headerText-1-WmDq .headerTag-3GXZkV, :root .userPopout-2j1gM4 .headerTop-3GPUSF .headerText-1-WmDq .nickname-t08Mck {
@@ -785,7 +786,7 @@
 }
 :root .userPopout-2j1gM4 .avatarWrapperNormal-ahVUaC {
   position: absolute;
-  top: 165px;
+  top: 164px;
   left: 20px;
 }
 :root .userPopout-2j1gM4 .avatarWrapperNormal-ahVUaC .avatar-2Vndt_ {
